<resources>
    <string name="app_name">SmartButler</string>
    <string name="title1">Voice Helper</string>
    <string name="title2">News Collection</string>
    <string name="title3">Pictures Viewing</string>
    <string name="title4">User Center</string>
    <string name="setting">Setting</string>
    <string name="toMain">Enter</string>
    <string name="skip">Skip ></string>
    <string name="editFile">Edit File</string>
    <string name="userName">"Name: "</string>
    <string name="userGender">"Gender: "</string>
    <string name="userAge">Age:</string>
    <string name="userInfo">"Info: "</string>
    <string name="confirm">Confirm</string>
    <string name="packageTracking">Package Tracking</string>
    <string name="attributionSearch">Attribution Search</string>
    <string name="toast_not_empty">Text Boxes Shall Not Be Empty</string>
    <string name="toast_login_error">Login Failed, error:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="Camera">Camera</string>
    <string name="Pictures">Pictures</string>
    <string name="Cancel">Cancel</string>
    <string name="r_username">Username</string>
    <string name="r_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_pass">Remember Password</string>
    <string name="r_age">Age</string>
    <string name="r_desc">Description</string>
    <string name="Boy">Male</string>
    <string name="Girl">Female</string>
    <string name="r_password2">Repeat Password</string>
    <string name="Desc_Is_Empty">I am empty now.</string>
    <string name="password_not_match">Two passwords are different</string>
    <string name="succeed">Success!</string>
    <string name="error">Error:</string>
    <string name="forget_pass">Edit Password?</string>
    <string name="editPass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="text_now_login">Login...</string>
</resources>
